--- a/src/assets/styles/_reusables.css
+++ b/src/assets/styles/_reusables.css
@@ -7,7 +7,7 @@
     @apply pb-4 text-[15px] font-semibold -tracking-wide text-blue-600;
   }
   .section-title {
-    @apply pb-4 text-[28px] font-extrabold leading-title -tracking-wide text-gray-900;
+    @apply pb-4 text-[48px] font-bold leading-title -tracking-wide text-gray-900;
   }
   .section-text {
     @apply text-[15px] font-medium leading-text -tracking-wide text-gray-600;
@@ -24,7 +24,7 @@
     @apply border-[1.5px] border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white;
   }
   .button-icon {
-    @apply inline-flex text-[1.3rem];
+    @apply inline-flex text-[1.5rem];
   }
 
   /* container class */
